--- a/Frontend/src/app/selection/selection.component.html
+++ b/Frontend/src/app/selection/selection.component.html
@@ -60,7 +60,7 @@
                     <button type="button" (click)="temp1()">Select Template</button>
                     <h2>The chronological resume format.</h2>
                     <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
-                    <a type="button" (click)="generatelink('template1')" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
+                    <a type="button" (click)="generatelink('template1')" class="read-more">Create link and send To Mail<i class="fa fa-caret-right"></i></a>              
             </div>          
           </div>
   
@@ -76,7 +76,7 @@
                 <button type="button" (click)="temp2()">Select Template</button>
                 <h2>The chronological resume format.</h2>
                 <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
-                <a type="button" (click)="generatelink('template2')" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
+                <a type="button" (click)="generatelink('template2')" class="read-more">Create link and send To Mail<i class="fa fa-caret-right"></i></a>              
         </div> 
         </div>
   
@@ -92,7 +92,7 @@
                 <button type="button" (click)="temp3()">Select Template</button>
                 <h2>The chronological resume format.</h2>
                 <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
-                <a  type="button" (click)="generatelink('template3')" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
+                <a  type="button" (click)="generatelink('template3')" class="read-more">Create link and send To Mail<i class="fa fa-caret-right"></i></a>              
         </div> 
         </div>
   
