--- a/Frontend/src/app/form5/form5.component.html
+++ b/Frontend/src/app/form5/form5.component.html
@@ -16,7 +16,7 @@
 			<input id="photo" name="image" class="input-file" type="file" multiple (change)="selectImage($event)" />
 		</div>
 
-		<button type="button" class="btn" name="submit" (click)=upload()>Upload Photo</button>
+		<button type="submit" class="btn" name="submit" (click)=upload()>Upload Photo</button>
 
 	</div>
 	
@@ -28,15 +28,15 @@
 <div class="framed">
 	<div class="centers">
 		<div class="title">
-			<h1>Drop Video to upload</h1>
+			<h1>Video Url to upload</h1>
 		</div>
 
 		<div class="dropzone">
 			<img src="http://100dayscss.com/codepen/upload.svg" class="upload-icon" />
-			<input id="photo" name="image" class="input-file" type="file" />
+			<input placeholder="Video Url" id="photo" name="video" class="video" type="text" [(ngModel)]="video.Url"/>
 		</div>
 
-		<button type="submit" class="btn" name="submit">Upload file</button>
+		<button type="button" class="btn" (click)="uploadvideo()"  >Upload Url</button>
 
 	</div>
   
