--- a/Frontend/src/app/template1/template1.component.css
+++ b/Frontend/src/app/template1/template1.component.css
@@ -287,3 +287,17 @@ abbr    {
 #footer .credits a  {
     font-weight: normal;
 }
+.modal-title{
+    padding-left: 10px;
+}
+.modal{
+    width: 100%;
+    height: 1000px;
+}
+.modal-body{
+    margin-top: 5px;
+}
+youtube-player{
+     
+    padding: 5px;
+}
