--- a/Frontend/src/app/template3/template3.component.html
+++ b/Frontend/src/app/template3/template3.component.html
@@ -79,11 +79,43 @@
         </div>
       </section>
 
-      <button type="button" (click)="generatePdf()">Download</button>
+
     </div>
+    <button type="button" (click)="generatePdf()">Download</button>
+    <button type="button" class="btn btn-outline-warning" (click)="open(content)">my Video</button>
     </div>
+    
   </div>
+
    </div>
+
+   
+
+<div class="modal">
+    <ng-template #content let-c="close" let-d="dismiss" >
+    
+    
+        <div class="modal-header card-header" style="border-radius: 10px;">
+          <h4 class="modal-title">About Me.</h4>
+            <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+              <span style="padding-right: 4px;" aria-hidden="true">&times;</span>
+            </button>
+        
+       </div>
+          <div class="modal-body">
+            <youtube-player 
+            videoId= {{Resumedata.video}} 
+            suggestedQuality="highres" 
+            [height]="230" 
+            [width]="490" 
+            [startSeconds]="4"
+            [endSeconds]="8">
+          </youtube-player>
+          </div>
+      
+      </ng-template>
+    
+</div>
    
 
 
