--- a/Frontend/src/app/usersidenav/usersidenav.component.html
+++ b/Frontend/src/app/usersidenav/usersidenav.component.html
@@ -9,7 +9,7 @@
     <a [class.dis]="!check.LoggedIn()" [disabled]="!check.LoggedIn()" mat-list-item routerLink="select-template" routerLinkActive="list-item-active"><mat-icon>dashboard</mat-icon>Select Template</a>
     <a [class.dis]="check.LoggedIn()" [disabled]="check.LoggedIn()" mat-list-item routerLink="form1" routerLinkActive="list-item-active"><mat-icon>edit</mat-icon>Create Resume</a>
     <a [class.dis]="!check.LoggedIn()" [disabled]="!check.LoggedIn()" mat-list-item routerLink="updateform1" routerLinkActive="list-item-active"><mat-icon>update</mat-icon>Update Resume</a>
-    <a [class.dis]="!check.LoggedIn()" [disabled]="!check.LoggedIn()" mat-list-item routerLink="form5" routerLinkActive="list-item-active"><mat-icon>photo</mat-icon>Update Photo</a>
+    <a [class.dis]="!check.LoggedIn()" [disabled]="!check.LoggedIn()" mat-list-item routerLink="form5" routerLinkActive="list-item-active"><mat-icon>photo</mat-icon>Update Photo or Video</a>
     <a [class.dis]="!check.LoggedIn()" [disabled]="!check.LoggedIn()" mat-list-item routerLink="/manage-users" routerLinkActive="list-item-active" (click)="delete()"><mat-icon>delete</mat-icon>Delete Resume</a>
     <a [class.dis]="check.LoggedIn()" [disabled]="check.LoggedIn()" mat-list-item routerLink="/add-blog" routerLinkActive="list-item-active" (click)="open(content)"><mat-icon>visibility</mat-icon>View Saved Resumes</a>
     <a mat-list-item routerLink="/add-blog" routerLinkActive="list-item-active" (click)="open(content2)"><mat-icon>star</mat-icon>Rate Us</a>
