--- a/Frontend/src/app/form1/form1.component.css
+++ b/Frontend/src/app/form1/form1.component.css
@@ -133,8 +133,11 @@ form .input-box span.details{
     background: linear-gradient(135deg, #71b7e6, #9b59b6);
   }
  form .button input:hover{
-  transform: scale(0.99);
+  
   background: linear-gradient(-135deg, #c2c2c7,#1d76b1);
+  }
+  form .button input:disabled{
+    background: rgb(190, 188, 188);
   }
  @media(max-width: 584px){
  .container{
