--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<section class="u-align-right u-clearfix u-image u-shading u-section-1" id="carousel_d329" data-image-width="1280" data-image-height="853">
+
+<section class="u-align-right u-clearfix u-image u-shading u-section-1" id="carousel_d329" data-image-width="1280" data-image-height="100%">
   <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
     <div class="u-align-left u-border-6 u-border-white u-container-style u-expanded-width-xs u-group u-opacity u-opacity-15 u-group-1">
       <div class="u-container-layout u-container-layout-1">
