--- a/Frontend/src/app/updateform2/updateform2.component.html
+++ b/Frontend/src/app/updateform2/updateform2.component.html
@@ -2,7 +2,7 @@
   <div class="title">Education Details</div>
   <br>
   <div class="content">
-    <form action="#" (ngSubmit)="updatedata2()">
+    <form action="#" (ngSubmit)="updatedata2()"  #updateform="ngForm">
       
       <div *ngFor="let i of http.Updatedata.education;let j=index">
         <div class="user-details">
@@ -12,22 +12,24 @@
            <option>Bachelor’s Degree</option>
            <option>Master’s Degree</option>
            <option>Doctoral Degree</option>
+           <option>Plus Two </option>
+           <option>Tenth</option>
          </select>
                     
            </div>
            <div class="input-box">
             <span class="details">Specialisation</span>
-            <input type="text" name="mobile{{j}}" placeholder="Enter your Specialisation" [(ngModel)]="i.specialisation"required>
+            <input required="required" type="text" name="mobile{{j}}" placeholder="Enter your Specialisation" [(ngModel)]="i.specialisation"required>
           </div>
 
           <div class="input-box">
             <span class="details">Passout Year</span>
-            <input type="number" name="yaer{{j}}" placeholder="Enter your Passout Year" [(ngModel)]="i.year" required>
+            <input required="required" type="number" name="yaer{{j}}" placeholder="Enter your Passout Year" [(ngModel)]="i.year" required>
           </div>
 
           <div class="input-box">
             <span class="details">Institution Name</span>
-            <input type="text"name="mobile" placeholder="Enter your Institution" [(ngModel)]="i.name"  name="name{{j}}" required>
+            <input required="required" type="text"name="mobile" placeholder="Enter your Institution" [(ngModel)]="i.name"  name="name{{j}}" required>
           </div>
         </div>
 
@@ -43,7 +45,7 @@
            </div>
        
           <div class="button">
-            <input type="submit" value="Next Page"> 
+            <input  [disabled]="updateform.form.invalid" type="submit" value="Next Page"> 
             <a routerLink="/user/updateform1"><input type="button" value="Back Page"></a>
           </div>
         
