--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -7,12 +7,12 @@
             <form class="login-form" (ngSubmit)="loginUser()" #userLogin="ngForm">
   <div class="form-group">
     <label for="exampleInputEmail1" class="text-uppercase">Email</label>
-    <input type="text" class="form-control" placeholder="enter valid Email" name="email" required="required"  pattern="^[a-zA-Z0-9.%+]+@[a-zA-Z0-9.-]+\.[a-z]{2,4}" [(ngModel)]="user.username">
+    <input type="text" class="form-control" placeholder="Enter valid Email" name="email" required="required"  pattern="^[a-zA-Z0-9.%+]+@[a-zA-Z0-9.-]+\.[a-z]{2,4}" [(ngModel)]="user.username">
     
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1" class="text-uppercase">Password</label>
-    <input type="password" class="form-control" placeholder="enter Password" name="pass"  [(ngModel)]="user.password" required minlength="8">
+    <input type="password" class="form-control" placeholder="Enter Password" name="pass"  [(ngModel)]="user.password" required minlength="8">
   </div>
   
   
