--- a/Frontend/src/app/updateform1/updateform1.component.html
+++ b/Frontend/src/app/updateform1/updateform1.component.html
@@ -6,38 +6,38 @@
     <div class="container">
       <div class="title">Personal Information</div>
       <div class="content">
-        <form action="#" (ngSubmit)="updatedata1()">
+        <form action="#" (ngSubmit)="updatedata1()"  #updateform="ngForm">
           <div class="user-details">
             <div class="input-box">
               <span class="details">Full Name</span>
-              <input type="text"name="full_name" placeholder="Enter your name" [(ngModel)]="http.Updatedata.name"required>
+              <input required="required" type="text" name="full_name" placeholder="Enter your name" [(ngModel)]="http.Updatedata.name"required>
             </div>
             
             <div class="input-box">
               <span class="details">Email</span>
-              <input type="text" name="email" placeholder="Enter your email" [(ngModel)]="http.Updatedata.email" required>
+              <input required="required" type="text" name="email" placeholder="Enter your email" [(ngModel)]="http.Updatedata.email" required>
             </div>
             <div class="input-box">
               <span class="details">Mobile Number</span>
-              <input type="number"name="mobile" placeholder="Enter your  Mobile number" [(ngModel)]="http.Updatedata.phonenumber" required>
+              <input required="required" type="number"name="mobile" placeholder="Enter your  Mobile number" [(ngModel)]="http.Updatedata.phonenumber" required>
             </div>
             <div class="input-box">
               <span class="details">Birthday</span>
-              <input type="date" id="birthday" placeholder="YYYY-MM-DD"name="dob" [(ngModel)]="http.Updatedata.dob">
+              <input required="required" type="date" id="birthday" placeholder="YYYY-MM-DD"name="dob" [(ngModel)]="http.Updatedata.dob">
             </div>
             <div class="input-box">
               <span class="details">Address</span>
-              <input type="text" placeholder="Enter your Address" name="address"  [(ngModel)]="http.Updatedata.address"required>
+              <input required="required" type="text" placeholder="Enter your Address" name="address"  [(ngModel)]="http.Updatedata.address"required>
             </div>
             <div class="input-box">
               <span class="details">About you</span>
-              <input type="text" placeholder="Enter About you" name="about"  [(ngModel)]="http.Updatedata.about"required>
+              <input required="required" type="text" placeholder="Enter About you" name="about"  [(ngModel)]="http.Updatedata.about"required>
             </div>
           </div>
           <div class="gender-details">
             <!-- <div class="category"> -->
             <label  for="choose">Choose Gender</label>
-    <select placeholder="Degree" name="degree" [(ngModel)]="http.Updatedata.gender">
+    <select required="required" placeholder="Degree" name="degree" [(ngModel)]="http.Updatedata.gender">
       <option class="gender">Male</option>
       <option>Female</option>
         </select>
@@ -46,7 +46,7 @@
           </div>
           <div class="button">
             
-            <input type="submit" value="Next Page"> 
+            <input  [disabled]="updateform.form.invalid" type="submit" value="Next Page"> 
           </div>
         </form>
       </div>
