--- a/Frontend/src/app/selection/selection.component.html
+++ b/Frontend/src/app/selection/selection.component.html
@@ -55,11 +55,11 @@
                   <h4>Template 1</h4>
                 </div>
                     <div class="policy-image">
-                      <img src="https://www.resumonk.com/assets/template-thumbnails/elemental-9a290f22da422ad3ea13363a7b2daff2857371ee649115e5e28f4a4414c640a4.jpg" alt="Template1">
+                      <img src="./assets/images/temp1.jpeg" alt="Template1">
                     </div>
-                    <button type="button" (click)="temp1()">Select Template</button>
-                    <h2>The chronological resume format.</h2>
-                    <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
+                    <div class="button"><a type="button" (click)="temp1()" >  Select Template </a></div> 
+                     <h2>Neo Classic</h2>
+                    <p>Both eye-catching and tasteful. Perfect blend of traditional and modern.</p>
                     <a type="button" (click)="generatelink('template1')" class="read-more">Create link and send To Mail<i class="fa fa-caret-right"></i></a>              
             </div>          
           </div>
@@ -71,11 +71,12 @@
               <h4>Template 2</h4>
             </div>
                 <div class="policy-image">
-                  <img src="https://www.resumonk.com/assets/template-thumbnails/elemental-9a290f22da422ad3ea13363a7b2daff2857371ee649115e5e28f4a4414c640a4.jpg" alt="Template1">
-                </div>
-                <button type="button" (click)="temp2()">Select Template</button>
-                <h2>The chronological resume format.</h2>
-                <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
+                 
+                <img src="./assets/images/temp2.jpeg" alt="Template1">
+              </div>
+              <div class="button"><a type="button" (click)="temp2()" >  Select Template </a></div> 
+                <h2>Executive</h2>
+                <p>A resume template that is guaranteed to impress. Plenty of information, no clutter.</p>
                 <a type="button" (click)="generatelink('template2')" class="read-more">Create link and send To Mail<i class="fa fa-caret-right"></i></a>              
         </div> 
         </div>
@@ -87,11 +88,11 @@
               <h4>Template 3</h4>
             </div>
                 <div class="policy-image">
-                  <img src="https://www.resumonk.com/assets/template-thumbnails/elemental-9a290f22da422ad3ea13363a7b2daff2857371ee649115e5e28f4a4414c640a4.jpg" alt="Template1">
+                  <img src="./assets/images/temp3.png" alt="Template1">
                 </div>
-                <button type="button" (click)="temp3()">Select Template</button>
-                <h2>The chronological resume format.</h2>
-                <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
+                <div class="button"><a type="button" (click)="temp3()" >  Select Template </a></div> 
+                <h2>Modern Teal</h2>
+                <p>A modern template that stands out with 2 distinct columns.Two columns that help focus on your experience.</p>
                 <a  type="button" (click)="generatelink('template3')" class="read-more">Create link and send To Mail<i class="fa fa-caret-right"></i></a>              
         </div> 
         </div>
