--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -1,5 +1,7 @@
 
-<section class="login-block">
+<app-header></app-header>
+<div style="margin-top: 80px;">
+  <section class="login-block">
     <div class="container">
     <div class="row">
         <div class="col-md-4 login-sec">
@@ -68,5 +70,6 @@
 </div>
 </div>
 </section>
+</div>
 
 	<app-footer></app-footer>
