--- a/Frontend/src/app/signup/signup.component.html
+++ b/Frontend/src/app/signup/signup.component.html
@@ -1,4 +1,5 @@
-<div class="register-photo">
+<app-header></app-header>
+<div class="register-photo" style="margin-top: 80px;">
     <div class="form-container">
         <div class="image-holder"></div>
         <form method="post" (ngSubmit)="signupUser()" #userSignup="ngForm">
