--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -1,29 +1,56 @@
-<nav class="navbar navbar-expand-lg nav1">
-  <div class="container-fluid">
-    <h3>Resume Builder</h3>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" routerLink="blogs">Blogs</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" routerLink="signup">Signup</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" routerLink="login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" routerLink="contactus">Contact Us</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-    
 
+
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+<div class="fixed-top">
+  <header class="topbar">
+      <div class="container">
+        <div class="row">
+          <!-- social icon-->
+          <div class="col-sm-12">
+            <ul class="social-network">
+              <li><a class="waves-effect waves-dark" ><i class="fa fa-facebook"></i></a></li>
+              <li><a class="waves-effect waves-dark" ><i class="fa fa-twitter"></i></a></li>
+              <li><a class="waves-effect waves-dark" ><i class="fa fa-linkedin"></i></a></li>
+              <li><a class="waves-effect waves-dark" ><i class="fa fa-pinterest"></i></a></li>
+              <li><a class="waves-effect waves-dark"><i class="fa fa-google-plus"></i></a></li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+  </header>
+  <nav class="navbar navbar-expand-lg navbar-dark mx-background-top-linear">
+    <div class="container">
+      <a class="navbar-brand" rel="nofollow" target="_blank" href="http://scadonsak.com/7bF" style="text-transform: uppercase;">E ResumeBuilderApp</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+
+        <ul class="navbar-nav ml-auto nav1">
+
+          <li class="nav-item">
+            <a class="nav-link"  routerLink="">Home
+              
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login">Log In</a>
+          </li>
+
+         <li class="nav-item">
+            <a class="nav-link" routerLink="/signup">Sign Up</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/contactus">Contact Us</a>
+          </li>
+
+          
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
