--- a/Frontend/src/app/template1/template1.component.html
+++ b/Frontend/src/app/template1/template1.component.html
@@ -170,8 +170,11 @@
 
 
 
-<button type="button" (click)="generatePdf()">Download</button>
-<button type="button" class="btn btn-outline-warning" (click)="open(content)">my Video</button>
+<div>
+    <button class='btn send' type="button" (click)="generatePdf()"><i class="fa fa-download"></i>Download</button>
+<button type="button" class="tempbutton" (click)="open(content)">my Video</button>
+</div>
+<button class='btn send'>Send</button>
 
 <div class="modal">
     <ng-template #content let-c="close" let-d="dismiss" >
